2006-05-03 Howard Butler <hobu@hobu.net>

	* source/headers/version.h.vc: Maintain a version.h.vc 
	until we come up with a better solution

2006-05-03 Sandro Santilli <strk@refractions.net>

	* configure.in: updated JTS_PORT to 1.7.1
	* source/headers/geos/noding/SegmentString.{h,inl}:
	testInvariant() moved from private to public access
	level, and ensured to be inlined.
	* source/headers/geos/noding/snapround/HotPixel.inl:
	changed sym_round() to java_math_round()
	* source/operation/buffer/RightmostEdgeFinder.cpp: more
	assertion checking
	* source/operation/buffer/BufferOp.cpp: fixed
	misuse of MCIndexNoder in bufferFixedPrecision.
	* source/headers/geos/geom/CoordinateSequence.h,
	source/headers/geos/geom/CoordinateArraySequence.h,
	source/geom/CoordinateArraySequence.cpp: added new
	non-static removeRepeatedPoints() mutator.
	* source/operation/buffer/OffsetCurveSetBuilder.cpp:
	used auto_ptr to protect leaks of CoordinateSequence
	* source/noding/ScaledNoder.cpp,
	source/headers/geos/noding/ScaledNoder.h: ported JTS
	bugfix in scale method.
	* source/headers/geos/opBuffer.h,
	source/headers/geos/operation/buffer/Makefile.am:
	reduced set of installed headers.

2006-05-02 Sandro Santilli <strk@refractions.net>

	* source/noding/ScaledNoder.cpp: use java_math_round instead
	of sym_round.
	* source/headers/geos/operation/polygonize/Makefile.am:
	do not install EdgeRing.h header.
	* source/operation/polygonize/: polygonizeEdgeRing.cpp
	renamed to EdgeRing.cpp, to follow JTS naming.

2006-05-02 Jeffrey J. Early <jearly@alum.ups.edu>

	* source/io/WKBReader.cpp: fixed reads of XDR WKB.

2006-04-28 Sandro Santilli <strk@refractions.net>

	* tests/unit/geom/: LineStringTest.cpp, MultiPointTest.cpp,
	PointTest.cpp, PolygonTest.cpp: only construct Geoms using
	GeometryFactory.
	* source/geom/GeometryCollection.cpp, source/geom/LineString.cpp,
	source/geom/MultiLineString.cpp, source/geom/MultiPoint.cpp,
	source/geom/MultiPolygon.cpp, source/geom/Point.cpp,